--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -1,7 +1,7 @@
 \usepackage{textcomp}
 % \usepackage{palatino}
 \usepackage{booktabs}
-\usepackage{unixode}
+%\usepackage{unixode}
 \usepackage{tikz, tikz-cd}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
@@ -37,33 +37,13 @@
 \usepackage{xcolor} % Required for specifying colors by name
 \definecolor{maincolor}{RGB}{25,50,243} % Define the color used for highlighting throughout the book
 
-%----------------------------------------------------------------------------------------
-%	FONTS
-%----------------------------------------------------------------------------------------
-
-\usepackage[]{fontspec}
-%\setromanfont{Latin Modern Math}
-\setmathfont{Latin Modern Math}
-\setsansfont{Bitstream Vera Sans}
-\setmonofont{Bitstream Vera Sans Mono}
-
-%\usepackage{palatino}
-%\usepackage{avant} % Use the Avantgarde font for headings
-%\usepackage{times} % Use the Times font for headings
-% \usepackage{mathptmx} % Use the Adobe Times Roman as the default text font together with math symbols from the Sym­bol, Chancery and Com­puter Modern fonts
-% \usepackage{libertine}
-% \usepackage{noto}
-
-\usepackage{microtype} % Slightly tweak font spacing for aesthetics
-% \usepackage[utf8]{inputenc} % Required for including letters with accents
-% \usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY AND INDEX
 %----------------------------------------------------------------------------------------
 
 % \usepackage{csquotes}
-\usepackage[style=alphabetic,citestyle=numeric,sorting=nyt,sortcites=true,autopunct=true,autolang=hyphen,hyperref=true,abbreviate=false,backref=true,backend=biber,defernumbers=true]{biblatex}
+% \usepackage[style=alphabetic,citestyle=numeric,sorting=nyt,sortcites=true,autopunct=true,autolang=hyphen,hyperref=true,abbreviate=false,backref=true,backend=biber,defernumbers=true]{biblatex}
 % \addbibresource{bibliografia.bib} % BibTeX bibliography file
 % \defbibheading{bibempty}{}
 
@@ -513,3 +493,4 @@ addtohook={%
 \fi
 }
 }
+
